created project batch files to replace args files